# didactic-lamp

./: README.md  setup.cfg
data/nytimes_all/: lookuptable.npy
data/nytimes_answers/: lookuptable.npy
data/sbg-words/: lookuptable.npy
myBot/: play_game.py  simulate_game.py  utils.py
