[metadata]
name = wordleBot
version = 0.0.1
author = Nic ODell
author_email = nicodell88@gmail.com
description = solve wordle real good
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/

[options]
python_requires = >=3.6
packages = find:
install_requires = 
    numpy
    plotly
    pathlib


